<resources>
    <string name="app_name">DemoApp</string>
    <string name="app_version">Version</string>
    <string name="staging_server">Staging Server</string>
    <string name="prod_server">Prod Server</string>
    <string name="start_audio_button">Start Audio</string>
    <string name="start_video_button">Start Video</string>
    <string name="version" translatable="false">Version 1.7</string>
    <string name="start_chat_button">Start Chat</string>
    <string name="additional_settings_button">Additional settings</string>
    <string name="start_schedule_button">Request Schedule Meeting</string>
    <string name="soon_as_possible">soon as possible</string>
    <string name="choose_time">Select meeting time!</string>
    <string name="set_time">Custom Date/Time</string>
    <string name="open_meeting">Join video meeting</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="meeting_info">Meeting information</string>
    <string name="meeting_url">VideoCall Url</string>
    <string name="meeting_time">Meeting DateTime</string>
    <string name="save_meeting_file">Save ics File</string>
    <string name="copy">Copy meeting url</string>
    <string name="delete">Delete meeting</string>
    <string name="sendlogs">Send logs</string>
    <string name="availability">Availability</string>
    <string name="pause_screen_shae">pause screen share</string>
    <string name="resume_screen_share">resume screen share</string>
    <string name="messaging_api">Use MESSAGING API</string>
</resources>